--- a/MyRental.Blazor/Pages/Advertisement/Edit.razor
+++ b/MyRental.Blazor/Pages/Advertisement/Edit.razor
@@ -163,7 +163,7 @@
     public int AdvertisementId { get; set; }
 
     readonly AdvertisementDtoInput _advertisementInput = new();
-    AdvertisementDto? _adDto;
+    AdvertisementDto? _advertisementDto;
     List<string>? _countries;
     List<string>? _cities;
     bool _isCityDisabled;
@@ -171,8 +171,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _adDto = await AdvertisementService.GetByIdAsync(AdvertisementId);
-        Mapper.Map(_adDto, _advertisementInput);
+        _advertisementDto = await AdvertisementService.GetByIdAsync(AdvertisementId);
+        Mapper.Map(_advertisementDto, _advertisementInput);
 
         await FindCountriesAsync();
         InitCities();
@@ -238,7 +238,7 @@
     private void InitCities()
     {
         _cities = File.ReadLines("D:\\Programming\\Projects\\my-rental\\MyRental.Infrastructure\\Enums\\Cities.txt")
-            .Where(city => city.EndsWith($"{_adDto.Country}"))
+            .Where(city => city.EndsWith($"{_advertisementDto.Country}"))
             .OrderBy(city => city[0])
             .ToList();
     }
