--- a/MyRental.Blazor/Pages/Auth/Login.razor
+++ b/MyRental.Blazor/Pages/Auth/Login.razor
@@ -2,6 +2,7 @@
 
 @inject ILocalStorageService LocalStorageService
 @inject AuthenticationStateProvider AuthStateProvider
+@inject IJSRuntime Js
 @inject IAuthService AuthService
 @inject NavigationManager NavManager
 
@@ -38,12 +39,19 @@
 
     private async void LoginAsync()
     {
-        var jwt = await AuthService.LoginAsync(_login);
+        try
+        {
+            var jwt = await AuthService.LoginAsync(_login);
+            
+            await LocalStorageService.SetItemAsync("Jwt", jwt);
         
-        await LocalStorageService.SetItemAsync("Jwt", jwt);
-        
-        await AuthStateProvider.GetAuthenticationStateAsync();
-        
-        NavManager.NavigateTo("/user/account", true);
+            await AuthStateProvider.GetAuthenticationStateAsync();
+            
+            NavManager.NavigateTo("/user/account", true);
+        }
+        catch (Exception e)
+        {
+            await Js.InvokeVoidAsync("alert", e.Message);
+        }
     }
 }
